name:           SmartLight
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Federico Sawady
maintainer:     Federico Sawady

library
  build-depends:    
                   base >= 4,
                   containers,
                   SDL-image,
                   SDL,
                   containers,
                   unordered-containers,
                   lens
  ghc-options:      -Wall
  exposed-modules:  
                   SmartLight
  hs-source-dirs:  
                   src, 
                   src/Examples/Pong
  other-modules:   
                   Ball,
                   Common,
                   CommonPong,
                   Entity,
                   Events,
                   Game,
                   GameLoop,
                   Image,
                   Main,
                   Player,
                   Pong,
                   Screen,
                   Bounds
