name:           SmartLight
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Federico Sawady
maintainer:     Federico Sawady

library
  build-depends:    
                   base >= 4,
                   containers,
                   unordered-containers,
                   SDL-ttf,
                   SDL-image,
                   SDL,
                   lens
  ghc-options:      -Wall
  exposed-modules:  SmartLight
  hs-source-dirs:   src
  other-modules:    
                   Common,
                   Entity,
                   Events,
                   Game,
                   GameLoop,
                   Image,
                   Main,
                   Screen,
                   Bounds,
                   Text
