name:           SmartLight
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Federico Sawady
maintainer:     Federico Sawady

library
  build-depends:    
                   base >= 4,
                   containers,
                   unordered-containers,
                   SDL-ttf,
                   SDL-image,
                   SDL,
                   lens,
                   mtl
  ghc-options:      -Wall
  exposed-modules:  SmartLight
  hs-source-dirs:   
                    Examples/Pong/src, 
                    src
  other-modules:    
                   Ball,
                   Bounds,
                   Common,
                   CommonPong,
                   Entity,
                   Events,
                   Extras,
                   Game,
                   GameLoop,
                   Image,
                   Main,
                   Player,
                   Pong,
                   Screen,
                   Text
