name:           Pong
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         vm

executable Pong
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   SmartLight,
                   lens

  ghc-options:     -Wall

