name:           SmartLight
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Federico Sawady
maintainer:     Federico Sawady

library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   containers,
                   SDL-image,
                   SDL,
                   containers,
                   unordered-containers,
                   data-lens,
                   data-lens-template
  ghc-options:     -Wall
  other-modules:   
                   Screen,
                   Game,
                   GameLoop,
                   Image,
                   SmartLight,
                   Entity

executable SmartLight
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   containers,
                   SDL-image,
                   SDL,
                   containers,
                   unordered-containers,
                   data-lens,
                   data-lens-template
  ghc-options:     -Wall
  other-modules:   
                   Screen,
                   Game,
                   GameLoop,
                   Image,
                   SmartLight,
                   Entity

